@@ -57,8 +57,8 @@ WNOMISMATCHEDTAGS = @WNOMISMATCHEDTAGS@
 INC = -I
 OBJ = lo
 TMPDIRCPPFLAG = -DTMP_DIR=\"$(tmpdir)\"
-DEBUGDIRCPPFLAG = -DDEBUG_DIR=\"$(debugdir)\"
 LOGDIRCPPFLAG = -DLOG_DIR=\"$(logdir)\"
+DEBUGDIRCPPFLAG = -DDEBUG_DIR=\"$(debugdir)\"
 CONFIGFILECPPFLAG = -DDEFAULT_CONFIG_FILE=\"$(sysconfdir)/sqlrelay.conf\" -DDEFAULT_CONFIG_DIR=\"$(sysconfdir)/sqlrelay.conf.d\"
 CACHEDIRCPPFLAG = -DCACHE_DIR=\"$(cachedir)\"
 
@@ -466,7 +466,7 @@ ROUTERUSERPATH =
 ifeq ($(MINGW32),yes)
 UTILDLLEXPORTS = -DLIBSQLRUTIL_EXPORTS
 endif
-UTILCPPFLAGS = $(WERROR) $(BASECPPFLAGS) $(UTILDLLEXPORTS) $(TMPDIRCPPFLAG) $(DEBUGDIRCPPFLAG) $(CONFIGFILECPPFLAG) -I./ -I$(top_builddir)/ -I$(top_builddir)/src/common $(RUDIMENTSINCLUDES) -DLIBEXECDIR=\"$(libexecdir)\"
+UTILCPPFLAGS = $(WERROR) $(BASECPPFLAGS) $(UTILDLLEXPORTS) $(TMPDIRCPPFLAG) $(LOGDIRCPPFLAG) $(DEBUGDIRCPPFLAG) $(CONFIGFILECPPFLAG) -I./ -I$(top_builddir)/ -I$(top_builddir)/src/common $(RUDIMENTSINCLUDES) -DLIBEXECDIR=\"$(libexecdir)\"
 UTILLIBS = $(RUDIMENTSLIBS)
 
 
@@ -569,7 +569,7 @@ STATICPLUGINLIBS += $(SYBASELIBS)
 STATICPLUGINLIBS += -L$(top_builddir)/src/api/c++ -lsqlrclient
 endif
 
-SERVERCPPFLAGS = $(WERROR) $(BASECPPFLAGS) $(CONFIGFILECPPFLAG) $(CACHEDIRCPPFLAG) $(DEBUGDIRCPPFLAG) $(LOGDIRCPPFLAG) -I./ -I$(top_builddir)/ -I$(top_builddir)/src/common -I$(top_builddir)/src/util $(RUDIMENTSINCLUDES) -DLIBEXECDIR=\"$(libexecdir)\"
+SERVERCPPFLAGS = $(WERROR) $(BASECPPFLAGS) $(CONFIGFILECPPFLAG) $(CACHEDIRCPPFLAG) -I./ -I$(top_builddir)/ -I$(top_builddir)/src/common -I$(top_builddir)/src/util $(RUDIMENTSINCLUDES) -DLIBEXECDIR=\"$(libexecdir)\"
 LIBSQLRSERVERLIBS = -L$(top_builddir)/src/util -lsqlrutil
 SERVERLIBS = -L./ -lsqlrserver $(STATICPLUGINLIBS) -L$(top_builddir)/src/util -lsqlrutil $(RUDIMENTSLIBS) $(MATHLIB) $(EXTRALIBS) $(LIBDMALLOC) $(LIBEFENCE)
 ifneq ($(strip $(libdir)),)
@@ -586,7 +586,7 @@ PLUGINLIBS = -L$(top_builddir)/src/server -lsqlrserver -L$(top_builddir)/src/uti
 AUTHCPPFLAGS = $(PLUGINCPPFLAGS) -I$(top_builddir)/src/api/c++
 SQLRAUTH_SQLRELAYLIBS = -L$(top_builddir)/src/api/c++ -lsqlrclient
 
-LOGGERCPPFLAGS = $(PLUGINCPPFLAGS) $(DEBUGDIRCPPFLAG) $(LOGDIRCPPLAG)
+LOGGERCPPFLAGS = $(PLUGINCPPFLAGS)
 
 ifeq ($(SQLRELAY_ENABLE_SHARED),yes)
 INSTALLSHAREDLIB = installsharedlib
